--- a/FirstAngular/DockerFile
+++ b/FirstAngular/DockerFile
@@ -1,7 +1,7 @@
 FROM node:14
 
 # Setting working directory. All the path will be relative to WORKDIR
-WORKDIR /usr/src/app
+WORKDIR /Jenkins-Docker-Swarm/FirstAngular/src
 
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
